# squirrel-lang-sdk

./: .gitignore  CMakeLists.txt  README.md  appveyor.yml  circle.yml
src/sqdbg/: main.cpp  sqdbgserver.cpp  sqdbgserver.h  sqrdbg.cpp  sqrdbg.h
test/sqdbg/: test.nut  test.sh
